Update templates to resolve name collisions

--- a/templatesOas/apis.mustache
+++ b/templatesOas/apis.mustache
@@ -21,7 +21,7 @@ import type {
     {{/imports}}
 } from '../models/index{{importFileExtension}}';
 
-export namespace {{#lambda.titlecase}}{{#lambda.camelcase}}{{appName}}{{/lambda.camelcase}}{{/lambda.titlecase}} {
+export namespace {{#vendorExtensions}}{{#x-sdk-classname}}{{classname}}{{/x-sdk-classname}}{{^x-sdk-classname}}{{#lambda.titlecase}}{{#lambda.camelcase}}{{appName}}{{/lambda.camelcase}}{{/lambda.titlecase}}{{/x-sdk-classname}}{{/vendorExtensions}}{{^vendorExtensions}}{{#lambda.titlecase}}{{#lambda.camelcase}}{{appName}}{{/lambda.camelcase}}{{/lambda.titlecase}}{{/vendorExtensions}} {
 
 {{#hasEnums}}
 {{#operations}}
