Dynamic version for user agent

--- a/templatesOas/apis.mustache
+++ b/templatesOas/apis.mustache
@@ -9,7 +9,8 @@ import {
 import type { CommonParameters } from "@commerce-apps/core";
 import type { OperationOptions } from "retry";
 import type { RequestInit } from "node-fetch";
-import { defaultBaseUri, USER_AGENT_HEADER, USER_AGENT_VALUE } from "../runtime";
+import { defaultBaseUri } from "../runtime";
+import { USER_AGENT_HEADER, USER_AGENT_VALUE } from "../../version";
 import type {
     CompositeParameters,
     RequireParametersUnlessAllAreOptional
