Allow unknown query parameters

--- a/templatesOas/apis.mustache
+++ b/templatesOas/apis.mustache
@@ -383,8 +383,10 @@ export class {{#lambda.titlecase}}{{#lambda.camelcase}}{{appName}}{{/lambda.came
             pathParameters: pathParams,
             queryParameters: queryParams,
             retrySettings: (options || {}).retrySettings,
-            headers: headers,{{#hasBodyParam}}
-            body: (options || {}).body,{{/hasBodyParam}}
+            headers: headers,
+            {{#hasBodyParam}}
+            body: (options || {}).body,
+            {{/hasBodyParam}}
             {{^hasBodyParam}}
             {{#hasFormParams}}
             body: (options || {}).body,
