--- a/templatesOas/apis.mustache
+++ b/templatesOas/apis.mustache
@@ -28,33 +28,30 @@ export namespace {{#vendorExtensions}}{{#x-sdk-classname}}{{{ . }}}{{/x-sdk-clas
 {{#hasEnums}}
 {{#operations}}
 {{#operation}}
-{{#allParams}}
-{{#isEnum}}
-{{#stringEnums}}
-export enum {{operationIdCamelCase}}{{enumName}} {
-{{#allowableValues}}
-    {{#enumVars}}
-    {{{name}}} = {{{value}}}{{^-last}},{{/-last}}
-    {{/enumVars}}
-{{/allowableValues}}
-}
-{{/stringEnums}}
-{{^stringEnums}}
-
-export const {{operationIdCamelCase}}{{enumName}} = {
-{{#allowableValues}}
-    {{#enumVars}}
-    {{{name}}}: {{{value}}}{{^-last}},{{/-last}}
-    {{/enumVars}}
-{{/allowableValues}}
-} as const;
-export type {{operationIdCamelCase}}{{enumName}} = typeof {{operationIdCamelCase}}{{enumName}}[keyof typeof {{operationIdCamelCase}}{{enumName}}];
-{{/stringEnums}}
-{{/isEnum}}
-{{/allParams}}
+{{#vendorExtensions}}
+{{^x-scapi-internal}}
+{{> apis.enum}}
+{{/x-scapi-internal}}
+{{/vendorExtensions}}
+{{^vendorExtensions}}
+{{> apis.enum}}
+{{/vendorExtensions}}
 {{/operation}}
 {{/operations}}
 {{/hasEnums}}
+
+{{#operations}}
+{{#operation}}
+{{#vendorExtensions}}
+{{^x-scapi-internal}}
+{{> apis.parameters}}
+{{/x-scapi-internal}}
+{{/vendorExtensions}}
+{{^vendorExtensions}}
+{{> apis.parameters}}
+{{/vendorExtensions}}
+{{/operation}}
+{{/operations}}
 
 /**
 * [{{appName}}](https://developer.salesforce.com/docs/commerce/commerce-api/references?meta={{#lambda.kebabcase}}{{appName}}{{/lambda.kebabcase}}:Summary)
@@ -114,287 +111,14 @@ export class {{#lambda.titlecase}}{{#lambda.camelcase}}{{appName}}{{/lambda.came
 
 {{#operations}}
 {{#operation}}
-
-    /**
-    * {{{unescapedNotes}}}
-    *
-    * If you would like to get a raw Response object use the other {{nickname}} function.
-    *
-    * @param options - An object containing the options for this method.
-    * @param options.parameters - An object containing the parameters for this method.
-    {{#allParams}}
-    {{^isBodyParam}}
-    {{^isHeaderParam}}
-    {{^isFormParam}}
-    * @param options.parameters.{{{paramName}}} - {{{unescapedDescription}}}
-    {{/isFormParam}}
-    {{/isHeaderParam}}
-    {{/isBodyParam}}
-    {{/allParams}}
-    * @param options.retrySettings - Retry options for the `node-retry` package
-    * @param options.fetchOptions - Fetch options for the `make-fetch-happen` package
-    * @param options.headers - An object literal of key value pairs of the headers to be sent with this request.
-    {{#hasBodyParam}}
-    * @param options.body - The data to send as the request body.
-    {{/hasBodyParam}}
-    {{^hasBodyParam}}
-    {{#hasFormParams}}
-    * @param options.body - The data to send as the request body.
-    {{#formParams}}
-    {{#isFormParam}}
-    * @param options.body.{{{paramName}}} - {{{unescapedDescription}}}
-    {{/isFormParam}}
-    {{/formParams}}
-    {{/hasFormParams}}
-    {{/hasBodyParam}}
-    *
-    * @returns A promise of type {{{returnType}}}{{^returnType}}void{{/returnType}}.
-    */
-    {{nickname}}(
-        options{{^hasBodyParam}}?{{/hasBodyParam}}: RequireParametersUnlessAllAreOptional<{
-            parameters?: CompositeParameters<{
-            {{#allParams}}
-            {{^isBodyParam}}
-            {{^isHeaderParam}}
-            {{^isFormParam}}
-                {{paramName}}{{^required}}?{{/required}}: {{#isEnum}}{{{datatypeWithEnum}}}{{/isEnum}}{{^isEnum}}{{^isDateTime}}{{^isDate}}{{{dataType}}}{{/isDate}}{{/isDateTime}}{{#isDateTime}}string{{/isDateTime}}{{#isDate}}string{{/isDate}}{{#isNullable}} | null{{/isNullable}}{{/isEnum}};
-            {{/isFormParam}}
-            {{/isHeaderParam}}
-            {{/isBodyParam}}
-            {{/allParams}}
-            } & QueryParameters, CommonParameters>,
-            retrySettings?: OperationOptions,
-            fetchOptions?: RequestInit,
-            headers?: { [key: string]: string },
-            {{#hasBodyParam}}
-            {{#bodyParam}}
-            body: {{{dataType}}}
-            {{/bodyParam}}
-            {{/hasBodyParam}}
-            {{^hasBodyParam}}
-            {{#hasFormParams}}
-            body: {
-            {{#formParams}}
-            {{#isFormParam}}
-                {{paramName}}{{^required}}?{{/required}}: {{#isEnum}}{{{dataType}}}{{/isEnum}}{{^isEnum}}{{^isDateTime}}{{^isDate}}{{{dataType}}}{{/isDate}}{{/isDateTime}}{{#isDateTime}}string{{/isDateTime}}{{#isDate}}string{{/isDate}}{{#isNullable}} | null{{/isNullable}}{{/isEnum}};
-            {{/isFormParam}}
-            {{/formParams}}
-            }
-            {{/hasFormParams}}
-            {{/hasBodyParam}}
-        }>
-    ): Promise<{{{returnType}}}{{^returnType}}void{{/returnType}}>;
-
-    /**
-    * {{{unescapedNotes}}}
-    *
-    * @param options - An object containing the options for this method.
-    * @param options.parameters - An object containing the parameters for this method.
-    {{#allParams}}
-    {{^isBodyParam}}
-    {{^isHeaderParam}}
-    {{^isFormParam}}
-    * @param options.parameters.{{{paramName}}} - {{{unescapedDescription}}}
-    {{/isFormParam}}
-    {{/isHeaderParam}}
-    {{/isBodyParam}}
-    {{/allParams}}
-    * @param options.retrySettings - Retry options for the `node-retry` package
-    * @param options.fetchOptions - Fetch options for the `make-fetch-happen` package
-    * @param options.headers - An object literal of key value pairs of the headers to be sent with this request.
-    {{#hasBodyParam}}
-    * @param options.body - The data to send as the request body.
-    {{/hasBodyParam}}
-    {{^hasBodyParam}}
-    {{#hasFormParams}}
-    * @param options.body - The data to send as the request body.
-    {{#formParams}}
-    {{#isFormParam}}
-    * @param options.body.{{{paramName}}} - {{{unescapedDescription}}}
-    {{/isFormParam}}
-    {{/formParams}}
-    {{/hasFormParams}}
-    {{/hasBodyParam}}
-    * @param rawResponse - Set to true to return entire Response object instead of DTO.
-    * 
-    * @returns A promise of type Response if rawResponse is true, a promise of type {{{returnType}}}{{^returnType}}void{{/returnType}} otherwise.
-    */
-    {{nickname}}<T extends boolean>(
-        options{{^hasBodyParam}}?{{/hasBodyParam}}: RequireParametersUnlessAllAreOptional<{
-            parameters?: CompositeParameters<{
-            {{#allParams}}
-                {{^isBodyParam}}
-                {{^isHeaderParam}}
-                {{^isFormParam}}
-                {{paramName}}{{^required}}?{{/required}}: {{#isEnum}}{{{datatypeWithEnum}}}{{/isEnum}}{{^isEnum}}{{^isDateTime}}{{^isDate}}{{{dataType}}}{{/isDate}}{{/isDateTime}}{{#isDateTime}}string{{/isDateTime}}{{#isDate}}string{{/isDate}}{{#isNullable}} | null{{/isNullable}}{{/isEnum}};
-                {{/isFormParam}}
-                {{/isHeaderParam}}
-                {{/isBodyParam}}
-            {{/allParams}}
-            } & QueryParameters, CommonParameters>,
-            retrySettings?: OperationOptions,
-            fetchOptions?: RequestInit,
-            headers?: { [key: string]: string },
-            {{#hasBodyParam}}
-            {{#bodyParam}}
-            body: {{{dataType}}}
-            {{/bodyParam}}
-            {{/hasBodyParam}}
-            {{^hasBodyParam}}
-            {{#hasFormParams}}
-            body: {
-            {{#formParams}}
-            {{#isFormParam}}
-                {{paramName}}{{^required}}?{{/required}}: {{#isEnum}}{{{dataType}}}{{/isEnum}}{{^isEnum}}{{^isDateTime}}{{^isDate}}{{{dataType}}}{{/isDate}}{{/isDateTime}}{{#isDateTime}}string{{/isDateTime}}{{#isDate}}string{{/isDate}}{{#isNullable}} | null{{/isNullable}}{{/isEnum}};
-            {{/isFormParam}}
-            {{/formParams}}
-            }
-            {{/hasFormParams}}
-            {{/hasBodyParam}}
-        }>,
-        rawResponse?: T
-    ): Promise<T extends true ? Response : {{{returnType}}}{{^returnType}}void{{/returnType}}>;
-
-    /**
-    * {{{unescapedNotes}}}
-    *
-    * @param options - An object containing the options for this method.
-    * @param options.parameters - An object containing the parameters for this method.
-    {{#allParams}}
-    {{^isBodyParam}}
-    {{^isHeaderParam}}
-    {{^isFormParam}}
-    * @param options.parameters.{{{paramName}}} - {{{unescapedDescription}}}
-    {{/isFormParam}}
-    {{/isHeaderParam}}
-    {{/isBodyParam}}
-    {{/allParams}}
-    * @param options.retrySettings - Retry options for the `node-retry` package
-    * @param options.fetchOptions - Fetch options for the `make-fetch-happen` package
-    * @param options.headers - An object literal of key value pairs of the headers to be sent with this request.
-    {{#hasBodyParam}}
-    * @param options.body - The data to send as the request body.
-    {{/hasBodyParam}}
-    {{^hasBodyParam}}
-    {{#hasFormParams}}
-    * @param options.body - The data to send as the request body.
-    {{#formParams}}
-    {{#isFormParam}}
-    * @param options.body.{{{paramName}}} - {{{unescapedDescription}}}
-    {{/isFormParam}}
-    {{/formParams}}
-    {{/hasFormParams}}
-    {{/hasBodyParam}}
-    * @param rawResponse - Set to true to return entire Response object instead of DTO.
-    * 
-    * @returns A promise of type Response if rawResponse is true, a promise of type {{{returnType}}}{{^returnType}}void{{/returnType}} otherwise.
-    */
-    async {{nickname}}(
-        options{{^hasBodyParam}}?{{/hasBodyParam}}: RequireParametersUnlessAllAreOptional<{
-            parameters?: CompositeParameters<{
-            {{#allParams}}
-                {{^isBodyParam}}
-                {{^isHeaderParam}}
-                {{^isFormParam}}
-                {{paramName}}{{^required}}?{{/required}}: {{#isEnum}}{{{datatypeWithEnum}}}{{/isEnum}}{{^isEnum}}{{^isDateTime}}{{^isDate}}{{{dataType}}}{{/isDate}}{{/isDateTime}}{{#isDateTime}}string{{/isDateTime}}{{#isDate}}string{{/isDate}}{{#isNullable}} | null{{/isNullable}}{{/isEnum}};
-                {{/isFormParam}}
-                {{/isHeaderParam}}
-                {{/isBodyParam}}
-            {{/allParams}}
-            } & QueryParameters, CommonParameters>,
-            retrySettings?: OperationOptions,
-            fetchOptions?: RequestInit,
-            headers?: { [key: string]: string },
-            {{#hasBodyParam}}
-            {{#bodyParam}}
-            body: {{{dataType}}}
-            {{/bodyParam}}
-            {{/hasBodyParam}}
-            {{^hasBodyParam}}
-            {{#hasFormParams}}
-            body: {
-            {{#formParams}}
-            {{#isFormParam}}
-                {{paramName}}{{^required}}?{{/required}}: {{#isEnum}}{{{dataType}}}{{/isEnum}}{{^isEnum}}{{^isDateTime}}{{^isDate}}{{{dataType}}}{{/isDate}}{{/isDateTime}}{{#isDateTime}}string{{/isDateTime}}{{#isDate}}string{{/isDate}}{{#isNullable}} | null{{/isNullable}}{{/isEnum}};
-            {{/isFormParam}}
-            {{/formParams}}
-            }
-            {{/hasFormParams}}
-            {{/hasBodyParam}}
-        }>,
-        rawResponse?: boolean
-    ): Promise<Response | {{{returnType}}}{{^returnType}}void{{/returnType}}> {
-        const optionParams = options?.parameters || ({} as Partial<NonNullable<NonNullable<typeof options>["parameters"]>>);
-        const configParams = this.clientConfig.parameters as CommonParameters;
-        
-        const pathParams = {};
-
-        {{#pathParams}}
-        if (optionParams["{{paramName}}"] !== undefined) {
-            pathParams["{{paramName}}"] = optionParams["{{paramName}}"];
-        } else if (configParams["{{paramName}}"] !== undefined) {
-            pathParams["{{paramName}}"] = configParams["{{paramName}}"];
-        }
-        {{#required}}
-        else {
-            throw new Error('Missing required path parameter: {{paramName}}');
-        }
-        {{/required}}
-        {{/pathParams}}
-
-        const queryParams: QueryParameters = {};
-
-        {{#queryParams}}
-        if (optionParams["{{paramName}}"] !== undefined) {
-            queryParams["{{paramName}}"] = optionParams["{{paramName}}"];
-        } else if (configParams["{{paramName}}"] !== undefined) {
-            queryParams["{{paramName}}"] = configParams["{{paramName}}"];
-        }
-        {{#required}}
-        else {
-            throw new Error('Missing required query parameter: {{paramName}}');
-        }
-        {{/required}}
-        {{/queryParams}}
-
-        Object.keys(optionParams).forEach((key) => {
-            const paramValue = optionParams[key as keyof typeof optionParams];
-            if(paramValue !== undefined && (key.startsWith('c_') || !((key in queryParams) || (key in pathParams)))) {
-                if(!key.startsWith('c_')) {
-                    console.warn(`Found unknown parameter for {{{nickname}}}: ${key}, adding as query parameter anyway`);
-                }
-                queryParams[key as keyof typeof queryParams] = paramValue;
-            }
-        })
-
-        const headers = mergeHeaders(getHeaders(options), {
-            {{#hasConsumes}}
-            {{#consumes}}
-            "Content-Type": "{{mediaType}}",
-            {{/consumes}}
-            {{/hasConsumes}}
-            [USER_AGENT_HEADER]: USER_AGENT_VALUE
-        });
-
-        return StaticClient.{{#lambda.lowercase}}{{httpMethod}}{{/lambda.lowercase}}({
-            client: this,
-            rawResponse: rawResponse,
-            path: "{{path}}",
-            pathParameters: pathParams,
-            queryParameters: queryParams,
-            retrySettings: (options || {}).retrySettings,
-            headers: headers,
-            {{#hasBodyParam}}
-            body: (options || {}).body,
-            {{/hasBodyParam}}
-            {{^hasBodyParam}}
-            {{#hasFormParams}}
-            body: (options || {}).body,
-            {{/hasFormParams}}
-            {{/hasBodyParam}}
-            ...(options{{^hasBodyParam}}?{{/hasBodyParam}}.fetchOptions && { fetchOptions: options.fetchOptions })
-        });
-    }
+{{#vendorExtensions}}
+{{^x-scapi-internal}}
+{{> apis.endpoint}}
+{{/x-scapi-internal}}
+{{/vendorExtensions}}
+{{^vendorExtensions}}
+{{> apis.endpoint}}
+{{/vendorExtensions}}
 {{/operation}}
 {{/operations}}
 }
