fix readme and export slasHelpers correctly

--- a/templates/index.ts.hbs
+++ b/templates/index.ts.hbs
@@ -4,7 +4,5 @@ import type * as {{apiName}}Types from "./{{directoryName}}";
 export type { {{apiName}}Types };
 {{/each}}
 
-import * as helpers from "./helpers";
-export { helpers };
-
+export { helpers, slasHelpers } from "./helpers";
 export { ClientConfig, CommonParameters, sdkLogger } from "@commerce-apps/core"
